--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,13 @@
 </head>
 
 <body>
-    <h1>Quotes</h1>
+    <section id="quote-box">
+        <p id="text">A quote</p>
+        <p id='author'>Author</p>
+        <button id='new-quote'>New Quote</button>
+        <a id='tweet-quote'>Tweet</a>
+    </section>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 
 </html>
