Load app bundle before FCC bundle

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,8 @@
         <button id='new-quote'>New Quote</button>
         <a id='tweet-quote'>Tweet</a>
     </section>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <%= htmlWebpackPlugin.tags.bodyTags %>
+        <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 
 </html>
