--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <a id='tweet-quote'>Tweet</a>
     </section>
     <%= htmlWebpackPlugin.tags.bodyTags %>
-        <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+        <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
 </body>
 
 </html>
